[tool.poetry]
name = "neos_tracker"
version = "0.1.0"
description = ""
authors = ["anosillus <anosillus@gmail.com>"]
license = "MIT"
packages = [
    { include = "src"},
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.3"
python-dotenv = "^0.15.0"
requests = "^2.25.1"
jupyterlab = "^3.0.9"
poetry-setup = "^0.3.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
click = "^7.1.2"
coverage = "^5.5"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-broken-line = "^0.3.0"
flake8-bugbear = "^21.3.1"
flake8-builtins = "^1.5.3"
flake8-import-order = "^0.18.1"
flake8-rst-docstrings = "^0.0.14"
flake8-spellcheck = "^0.24.0"
flake8-sql = "^0.4.1"
flake8-strict = "^0.2.1"
flake8-string-format = "^0.3.0"
isort = "^5.7.0"
logzero = "^1.6.3"
pandas-vet = "^0.2.2"
pep8 = "^1.7.1"
pep8-naming = "^0.11.1"
pip = "^21.0.1"
ptpython = "^3.0.16"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-logger = "^0.5.1"
pytest-mock = "^3.5.1"
pytest-runner = "^5.3.0"
python-language-server = "^0.36.2"
reorder-python-imports = "^2.4.0"
rstcheck = "^3.3.1"
setuptools = "^54.1.1"
sphinx = "^3.5.2"
tox = "^3.23.0"
twine = "^3.3.0"

[build-system]
requires = ["poetry>=0.12", "setuptools", "wheel"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
minversion = 6.0
xfail_strict=true
addopts = "-rsxX -l --tb=short --strict-markers"
testpaths = "tests"
norecursedirs = '.* venv src *.egg dist build'
